--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@rainbow-me/rainbowkit": "^0.1.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.0.1",
+    "@testing-library/user-event": "^14.1.0",
     "antd": "^4.18.7",
     "moralis": "^1.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-redux": "^7.2.4",
     "react-moralis": "^1.3.1",
     "react-router-dom": "6",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "wagmi": "^0.3.5",
+    "web-vitals": "^0.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
